Update ChangeableImage method
Now the old changeImageObject is split between two functions changeImage
and changeColor

--- a/src/main/java/ressources/css/brandish.css
+++ b/src/main/java/ressources/css/brandish.css
@@ -9,5 +9,5 @@
 .label {
   -fx-font-family: "Brandish";
   -fx-font-size: 100;
-  -fx-text-fill: rgba(255, 255, 255, 0.795);
+  -fx-text-fill: #ECECEC;
 }
