--- a/src/main/resources/css/background.css
+++ b/src/main/resources/css/background.css
@@ -4,3 +4,7 @@
   -fx-background-size: 100% 100%;
   -fx-background-position: center center;
 }
+
+#background {
+  -fx-background-color: rgb(85, 49, 137);
+}
